require user to be logged in to edit tweet

--- a/rspec_results.html
+++ b/rspec_results.html
@@ -288,55 +288,55 @@ a {
   <dl style="margin-left: 15px;">
   <dt id="example_group_2" class="passed">Homepage</dt>
     <script type="text/javascript">moveProgressBar('2.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.17050s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.06968s</span></dd>
   </dl>
 </div>
 <div id="div_group_3" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_3" class="passed">Signup Page</dt>
     <script type="text/javascript">moveProgressBar('5.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.01894s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.01640s</span></dd>
     <script type="text/javascript">moveProgressBar('8.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.02660s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.04759s</span></dd>
     <script type="text/javascript">moveProgressBar('11.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.01166s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.01218s</span></dd>
     <script type="text/javascript">moveProgressBar('14.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.01400s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.00941s</span></dd>
     <script type="text/javascript">moveProgressBar('17.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.01221s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.00880s</span></dd>
     <script type="text/javascript">moveProgressBar('20.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.02220s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.02081s</span></dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_4" class="passed">login</dt>
     <script type="text/javascript">moveProgressBar('22.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.01275s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.01108s</span></dd>
     <script type="text/javascript">moveProgressBar('25.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.03087s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.01846s</span></dd>
     <script type="text/javascript">moveProgressBar('28.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.01716s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.01998s</span></dd>
   </dl>
 </div>
 <div id="div_group_5" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_5" class="passed">logout</dt>
     <script type="text/javascript">moveProgressBar('31.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.01563s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.01847s</span></dd>
     <script type="text/javascript">moveProgressBar('34.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.01043s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.00837s</span></dd>
     <script type="text/javascript">moveProgressBar('37.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.01095s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.00957s</span></dd>
     <script type="text/javascript">moveProgressBar('40.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.02837s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.02332s</span></dd>
   </dl>
 </div>
 <div id="div_group_6" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_6" class="passed">user show page</dt>
     <script type="text/javascript">moveProgressBar('42.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">shows all a single users tweets</span><span class='duration'>0.06900s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">shows all a single users tweets</span><span class='duration'>0.04268s</span></dd>
   </dl>
 </div>
 <div id="div_group_7" class="example_group passed">
@@ -348,14 +348,14 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_8" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('45.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.03688s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.03709s</span></dd>
   </dl>
 </div>
 <div id="div_group_9" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_9" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('48.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.01150s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.01101s</span></dd>
   </dl>
 </div>
 <div id="div_group_10" class="example_group passed">
@@ -367,20 +367,20 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_11" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('51.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets user view new tweet form if logged in</span><span class='duration'>0.04369s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets user view new tweet form if logged in</span><span class='duration'>0.02653s</span></dd>
     <script type="text/javascript">moveProgressBar('54.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets user create a tweet if they are logged in</span><span class='duration'>0.05271s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets user create a tweet if they are logged in</span><span class='duration'>0.04385s</span></dd>
     <script type="text/javascript">moveProgressBar('57.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user tweet from another user</span><span class='duration'>0.04088s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user tweet from another user</span><span class='duration'>0.04436s</span></dd>
     <script type="text/javascript">moveProgressBar('60.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user create a blank tweet</span><span class='duration'>0.03211s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user create a blank tweet</span><span class='duration'>0.03333s</span></dd>
   </dl>
 </div>
 <div id="div_group_12" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_12" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('62.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view new tweet form if not logged in</span><span class='duration'>0.01133s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view new tweet form if not logged in</span><span class='duration'>0.01036s</span></dd>
   </dl>
 </div>
 <div id="div_group_13" class="example_group passed">
@@ -397,7 +397,7 @@ a {
     <script type="text/javascript">moveProgressBar('65.7');</script>
     <dd class="example failed">
       <span class="failed_spec_name">displays a single tweet</span>
-      <span class="duration">0.07076s</span>
+      <span class="duration">0.04350s</span>
       <div class="failure" id="failure_1">
         <div class="message"><pre>expected &quot;&lt;!DOCTYPE html&gt;\n&lt;html&gt;\n&lt;head&gt;\n  &lt;title&gt;Fwitter&lt;/title&gt;\n&lt;/head&gt;\n&lt;body&gt;\ni am a boss at tweeting&lt;/body&gt;\n&lt;/html&gt;&quot; to include &quot;Delete Tweet&quot;
 Diff:[0m
@@ -426,7 +426,7 @@ Diff:[0m
   <dl style="margin-left: 45px;">
   <dt id="example_group_15" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('68.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user view a tweet</span><span class='duration'>0.04087s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user view a tweet</span><span class='duration'>0.01940s</span></dd>
   </dl>
 </div>
 <div id="div_group_16" class="example_group passed">
@@ -438,34 +438,20 @@ Diff:[0m
   <dl style="margin-left: 30px;">
   <dt id="example_group_17" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('71.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user view tweet edit form if they are logged in</span><span class='duration'>0.04070s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user view tweet edit form if they are logged in</span><span class='duration'>0.02980s</span></dd>
     <script type="text/javascript">moveProgressBar('74.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.03711s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.03810s</span></dd>
     <script type="text/javascript">moveProgressBar('77.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user edit their own tweet if they are logged in</span><span class='duration'>0.04318s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user edit their own tweet if they are logged in</span><span class='duration'>0.03836s</span></dd>
     <script type="text/javascript">moveProgressBar('80.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a text with blank content</span><span class='duration'>0.03507s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a text with blank content</span><span class='duration'>0.04123s</span></dd>
   </dl>
 </div>
 <div id="div_group_18" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_18" class="passed">logged out</dt>
-    <script type="text/javascript">makeRed('div_group_18');</script>
-    <script type="text/javascript">makeRed('example_group_18');</script>
     <script type="text/javascript">moveProgressBar('82.8');</script>
-    <dd class="example failed">
-      <span class="failed_spec_name">does not load let user view tweet edit form if not logged in</span>
-      <span class="duration">0.08986s</span>
-      <div class="failure" id="failure_2">
-        <div class="message"><pre>expected nil to include &quot;/login&quot;, but it does not respond to `include?`</pre></div>
-        <div class="backtrace"><pre>./spec/controllers/application_controller_spec.rb:386:in `block (4 levels) in &lt;top (required)&gt;&#39;</pre></div>
-    <pre class="ruby"><code><span class="linenum">384</span>      it <span class="string"><span class="delimiter">'</span><span class="content">does not load let user view tweet edit form if not logged in</span><span class="delimiter">'</span></span> <span class="keyword">do</span>
-<span class="linenum">385</span>        get <span class="string"><span class="delimiter">'</span><span class="content">/tweets/1/edit</span><span class="delimiter">'</span></span>
-<span class="offending"><span class="linenum">386</span>        expect(last_response.location).to include(<span class="string"><span class="delimiter">&quot;</span><span class="content">/login</span><span class="delimiter">&quot;</span></span>)</span>
-<span class="linenum">387</span>      <span class="keyword">end</span>
-<span class="linenum">388</span>    <span class="keyword">end</span></code></pre>
-      </div>
-    </dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load let user view tweet edit form if not logged in</span><span class='duration'>0.01004s</span></dd>
   </dl>
 </div>
 <div id="div_group_19" class="example_group passed">
@@ -481,8 +467,8 @@ Diff:[0m
     <script type="text/javascript">moveProgressBar('85.7');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets a user delete their own tweet if they are logged in</span>
-      <span class="duration">0.03983s</span>
-      <div class="failure" id="failure_3">
+      <span class="duration">0.03287s</span>
+      <div class="failure" id="failure_2">
         <div class="message"><pre>Unable to find button &quot;Delete Tweet&quot;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
 /Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/base.rb:84:in `synchronize&#39;
@@ -501,8 +487,8 @@ Diff:[0m
     <script type="text/javascript">moveProgressBar('88.5');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user delete a tweet they did not create</span>
-      <span class="duration">0.04434s</span>
-      <div class="failure" id="failure_4">
+      <span class="duration">0.03882s</span>
+      <div class="failure" id="failure_3">
         <div class="message"><pre>Unable to find button &quot;Delete Tweet&quot;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
 /Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/base.rb:84:in `synchronize&#39;
@@ -524,24 +510,24 @@ Diff:[0m
   <dl style="margin-left: 30px;">
   <dt id="example_group_21" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('91.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load let user delete a tweet if not logged in</span><span class='duration'>0.02041s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load let user delete a tweet if not logged in</span><span class='duration'>0.01612s</span></dd>
   </dl>
 </div>
 <div id="div_group_22" class="example_group passed">
   <dl style="margin-left: 0px;">
   <dt id="example_group_22" class="passed">User</dt>
     <script type="text/javascript">moveProgressBar('94.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.01061s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.01059s</span></dd>
     <script type="text/javascript">moveProgressBar('97.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.01173s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.01086s</span></dd>
     <script type="text/javascript">makeRed('div_group_22');</script>
     <script type="text/javascript">makeRed('example_group_22');</script>
     <script type="text/javascript">moveProgressBar('100.0');</script>
     <dd class="example failed">
       <span class="failed_spec_name">has a secure password</span>
-      <span class="duration">0.01175s</span>
-      <div class="failure" id="failure_5">
-        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007fa04c83d440&gt;</pre></div>
+      <span class="duration">0.01060s</span>
+      <div class="failure" id="failure_4">
+        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007fb25c450bf8&gt;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/activemodel-4.2.5/lib/active_model/attribute_methods.rb:433:in `method_missing&#39;
 ./spec/models/user_spec.rb:18:in `block (2 levels) in &lt;top (required)&gt;&#39;</pre></div>
     <pre class="ruby"><code><span class="linenum">431</span>      <span class="keyword">else</span>
@@ -553,8 +539,8 @@ Diff:[0m
     </dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>1.33283 seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "35 examples, 5 failures";</script>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>0.94076 seconds</strong>";</script>
+<script type="text/javascript">document.getElementById('totals').innerHTML = "35 examples, 4 failures";</script>
 </div>
 </div>
 </body>
