add delete route

--- a/rspec_results.html
+++ b/rspec_results.html
@@ -288,55 +288,55 @@ a {
   <dl style="margin-left: 15px;">
   <dt id="example_group_2" class="passed">Homepage</dt>
     <script type="text/javascript">moveProgressBar('2.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.05286s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.16487s</span></dd>
   </dl>
 </div>
 <div id="div_group_3" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_3" class="passed">Signup Page</dt>
     <script type="text/javascript">moveProgressBar('5.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.01702s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.02600s</span></dd>
     <script type="text/javascript">moveProgressBar('8.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.02708s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.09172s</span></dd>
     <script type="text/javascript">moveProgressBar('11.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.01040s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.00920s</span></dd>
     <script type="text/javascript">moveProgressBar('14.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.01338s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.00924s</span></dd>
     <script type="text/javascript">moveProgressBar('17.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.01112s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.00879s</span></dd>
     <script type="text/javascript">moveProgressBar('20.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.03648s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.02893s</span></dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_4" class="passed">login</dt>
     <script type="text/javascript">moveProgressBar('22.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.02666s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.01787s</span></dd>
     <script type="text/javascript">moveProgressBar('25.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.03117s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.03311s</span></dd>
     <script type="text/javascript">moveProgressBar('28.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.01632s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.01678s</span></dd>
   </dl>
 </div>
 <div id="div_group_5" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_5" class="passed">logout</dt>
     <script type="text/javascript">moveProgressBar('31.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.01576s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.01450s</span></dd>
     <script type="text/javascript">moveProgressBar('34.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.00936s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.01180s</span></dd>
     <script type="text/javascript">moveProgressBar('37.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.01186s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.01067s</span></dd>
     <script type="text/javascript">moveProgressBar('40.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.02088s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.02699s</span></dd>
   </dl>
 </div>
 <div id="div_group_6" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_6" class="passed">user show page</dt>
     <script type="text/javascript">moveProgressBar('42.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">shows all a single users tweets</span><span class='duration'>0.07673s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">shows all a single users tweets</span><span class='duration'>0.06051s</span></dd>
   </dl>
 </div>
 <div id="div_group_7" class="example_group passed">
@@ -348,14 +348,14 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_8" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('45.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.03392s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.03851s</span></dd>
   </dl>
 </div>
 <div id="div_group_9" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_9" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('48.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.01203s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.00973s</span></dd>
   </dl>
 </div>
 <div id="div_group_10" class="example_group passed">
@@ -367,20 +367,20 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_11" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('51.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets user view new tweet form if logged in</span><span class='duration'>0.03477s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets user view new tweet form if logged in</span><span class='duration'>0.03468s</span></dd>
     <script type="text/javascript">moveProgressBar('54.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets user create a tweet if they are logged in</span><span class='duration'>0.06055s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets user create a tweet if they are logged in</span><span class='duration'>0.04677s</span></dd>
     <script type="text/javascript">moveProgressBar('57.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user tweet from another user</span><span class='duration'>0.03883s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user tweet from another user</span><span class='duration'>0.03909s</span></dd>
     <script type="text/javascript">moveProgressBar('60.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user create a blank tweet</span><span class='duration'>0.03376s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user create a blank tweet</span><span class='duration'>0.03084s</span></dd>
   </dl>
 </div>
 <div id="div_group_12" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_12" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('62.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view new tweet form if not logged in</span><span class='duration'>0.01052s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view new tweet form if not logged in</span><span class='duration'>0.01353s</span></dd>
   </dl>
 </div>
 <div id="div_group_13" class="example_group passed">
@@ -392,14 +392,14 @@ a {
   <dl style="margin-left: 45px;">
   <dt id="example_group_14" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('65.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">displays a single tweet</span><span class='duration'>0.02930s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">displays a single tweet</span><span class='duration'>0.03069s</span></dd>
   </dl>
 </div>
 <div id="div_group_15" class="example_group passed">
   <dl style="margin-left: 45px;">
   <dt id="example_group_15" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('68.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user view a tweet</span><span class='duration'>0.02166s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user view a tweet</span><span class='duration'>0.02020s</span></dd>
   </dl>
 </div>
 <div id="div_group_16" class="example_group passed">
@@ -411,20 +411,20 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_17" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('71.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user view tweet edit form if they are logged in</span><span class='duration'>0.03281s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user view tweet edit form if they are logged in</span><span class='duration'>0.04056s</span></dd>
     <script type="text/javascript">moveProgressBar('74.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.03793s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.03954s</span></dd>
     <script type="text/javascript">moveProgressBar('77.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user edit their own tweet if they are logged in</span><span class='duration'>0.04306s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user edit their own tweet if they are logged in</span><span class='duration'>0.04424s</span></dd>
     <script type="text/javascript">moveProgressBar('80.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a text with blank content</span><span class='duration'>0.04636s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a text with blank content</span><span class='duration'>0.03989s</span></dd>
   </dl>
 </div>
 <div id="div_group_18" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_18" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('82.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load let user view tweet edit form if not logged in</span><span class='duration'>0.01197s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load let user view tweet edit form if not logged in</span><span class='duration'>0.01032s</span></dd>
   </dl>
 </div>
 <div id="div_group_19" class="example_group passed">
@@ -441,7 +441,7 @@ a {
     <script type="text/javascript">moveProgressBar('85.7');</script>
     <dd class="example failed">
       <span class="failed_spec_name">lets a user delete their own tweet if they are logged in</span>
-      <span class="duration">0.03696s</span>
+      <span class="duration">0.04050s</span>
       <div class="failure" id="failure_1">
         <div class="message"><pre>Unable to find button &quot;Delete Tweet&quot;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -461,7 +461,7 @@ a {
     <script type="text/javascript">moveProgressBar('88.5');</script>
     <dd class="example failed">
       <span class="failed_spec_name">does not let a user delete a tweet they did not create</span>
-      <span class="duration">0.03727s</span>
+      <span class="duration">0.03959s</span>
       <div class="failure" id="failure_2">
         <div class="message"><pre>Unable to find button &quot;Delete Tweet&quot;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/capybara-2.5.0/lib/capybara/node/finders.rb:43:in `block in find&#39;
@@ -484,24 +484,24 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_21" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('91.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load let user delete a tweet if not logged in</span><span class='duration'>0.01369s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load let user delete a tweet if not logged in</span><span class='duration'>0.01728s</span></dd>
   </dl>
 </div>
 <div id="div_group_22" class="example_group passed">
   <dl style="margin-left: 0px;">
   <dt id="example_group_22" class="passed">User</dt>
     <script type="text/javascript">moveProgressBar('94.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.01016s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.00818s</span></dd>
     <script type="text/javascript">moveProgressBar('97.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.01173s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.01272s</span></dd>
     <script type="text/javascript">makeRed('div_group_22');</script>
     <script type="text/javascript">makeRed('example_group_22');</script>
     <script type="text/javascript">moveProgressBar('100.0');</script>
     <dd class="example failed">
       <span class="failed_spec_name">has a secure password</span>
-      <span class="duration">0.01059s</span>
+      <span class="duration">0.00994s</span>
       <div class="failure" id="failure_3">
-        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007ff76902b968&gt;</pre></div>
+        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007f8e77975d30&gt;</pre></div>
         <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/activemodel-4.2.5/lib/active_model/attribute_methods.rb:433:in `method_missing&#39;
 ./spec/models/user_spec.rb:18:in `block (2 levels) in &lt;top (required)&gt;&#39;</pre></div>
     <pre class="ruby"><code><span class="linenum">431</span>      <span class="keyword">else</span>
@@ -513,7 +513,7 @@ a {
     </dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>1.02144 seconds</strong>";</script>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>1.17016 seconds</strong>";</script>
 <script type="text/javascript">document.getElementById('totals').innerHTML = "35 examples, 3 failures";</script>
 </div>
 </div>
