--- a/rspec_results.html
+++ b/rspec_results.html
@@ -288,55 +288,55 @@ a {
   <dl style="margin-left: 15px;">
   <dt id="example_group_2" class="passed">Homepage</dt>
     <script type="text/javascript">moveProgressBar('2.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.12845s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the homepage</span><span class='duration'>0.14710s</span></dd>
   </dl>
 </div>
 <div id="div_group_3" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_3" class="passed">Signup Page</dt>
     <script type="text/javascript">moveProgressBar('5.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.03773s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the signup page</span><span class='duration'>0.02511s</span></dd>
     <script type="text/javascript">moveProgressBar('8.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.05891s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">signup directs user to twitter index</span><span class='duration'>0.09690s</span></dd>
     <script type="text/javascript">moveProgressBar('11.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.01203s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a username</span><span class='duration'>0.03234s</span></dd>
     <script type="text/javascript">moveProgressBar('14.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.01048s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without an email</span><span class='duration'>0.01317s</span></dd>
     <script type="text/javascript">moveProgressBar('17.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.00930s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user sign up without a password</span><span class='duration'>0.01278s</span></dd>
     <script type="text/javascript">moveProgressBar('20.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.03235s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a logged in user view the signup page</span><span class='duration'>0.16403s</span></dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_4" class="passed">login</dt>
     <script type="text/javascript">moveProgressBar('22.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.01141s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the login page</span><span class='duration'>0.03105s</span></dd>
     <script type="text/javascript">moveProgressBar('25.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.01756s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">loads the tweets index after login</span><span class='duration'>0.17194s</span></dd>
     <script type="text/javascript">moveProgressBar('28.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.01815s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view login page if already logged in</span><span class='duration'>0.15815s</span></dd>
   </dl>
 </div>
 <div id="div_group_5" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_5" class="passed">logout</dt>
     <script type="text/javascript">moveProgressBar('31.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.01796s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user logout if they are already logged in</span><span class='duration'>0.17079s</span></dd>
     <script type="text/javascript">moveProgressBar('34.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.00950s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user logout if not logged in</span><span class='duration'>0.01187s</span></dd>
     <script type="text/javascript">moveProgressBar('37.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.01008s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load /tweets if user not logged in</span><span class='duration'>0.00945s</span></dd>
     <script type="text/javascript">moveProgressBar('40.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.02427s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does load /tweets if user is logged in</span><span class='duration'>0.16745s</span></dd>
   </dl>
 </div>
 <div id="div_group_6" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_6" class="passed">user show page</dt>
     <script type="text/javascript">moveProgressBar('42.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">shows all a single users tweets</span><span class='duration'>0.06631s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">shows all a single users tweets</span><span class='duration'>0.12177s</span></dd>
   </dl>
 </div>
 <div id="div_group_7" class="example_group passed">
@@ -348,14 +348,14 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_8" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('45.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.04745s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user view the tweets index if logged in</span><span class='duration'>0.25662s</span></dd>
   </dl>
 </div>
 <div id="div_group_9" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_9" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('48.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.00876s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user view the tweets index if not logged in</span><span class='duration'>0.01142s</span></dd>
   </dl>
 </div>
 <div id="div_group_10" class="example_group passed">
@@ -367,20 +367,20 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_11" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('51.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets user view new tweet form if logged in</span><span class='duration'>0.02351s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets user view new tweet form if logged in</span><span class='duration'>0.17711s</span></dd>
     <script type="text/javascript">moveProgressBar('54.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets user create a tweet if they are logged in</span><span class='duration'>0.03916s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets user create a tweet if they are logged in</span><span class='duration'>0.19632s</span></dd>
     <script type="text/javascript">moveProgressBar('57.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user tweet from another user</span><span class='duration'>0.03936s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user tweet from another user</span><span class='duration'>0.25247s</span></dd>
     <script type="text/javascript">moveProgressBar('60.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user create a blank tweet</span><span class='duration'>0.03523s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user create a blank tweet</span><span class='duration'>0.18073s</span></dd>
   </dl>
 </div>
 <div id="div_group_12" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_12" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('62.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let user view new tweet form if not logged in</span><span class='duration'>0.01026s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let user view new tweet form if not logged in</span><span class='duration'>0.01199s</span></dd>
   </dl>
 </div>
 <div id="div_group_13" class="example_group passed">
@@ -392,14 +392,14 @@ a {
   <dl style="margin-left: 45px;">
   <dt id="example_group_14" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('65.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">displays a single tweet</span><span class='duration'>0.04402s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">displays a single tweet</span><span class='duration'>0.17500s</span></dd>
   </dl>
 </div>
 <div id="div_group_15" class="example_group passed">
   <dl style="margin-left: 45px;">
   <dt id="example_group_15" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('68.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user view a tweet</span><span class='duration'>0.01469s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user view a tweet</span><span class='duration'>0.09037s</span></dd>
   </dl>
 </div>
 <div id="div_group_16" class="example_group passed">
@@ -411,20 +411,20 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_17" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('71.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user view tweet edit form if they are logged in</span><span class='duration'>0.04003s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user view tweet edit form if they are logged in</span><span class='duration'>0.17929s</span></dd>
     <script type="text/javascript">moveProgressBar('74.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.03727s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a tweet they did not create</span><span class='duration'>0.24946s</span></dd>
     <script type="text/javascript">moveProgressBar('77.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user edit their own tweet if they are logged in</span><span class='duration'>0.04389s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user edit their own tweet if they are logged in</span><span class='duration'>0.18007s</span></dd>
     <script type="text/javascript">moveProgressBar('80.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a text with blank content</span><span class='duration'>0.04304s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user edit a text with blank content</span><span class='duration'>0.18091s</span></dd>
   </dl>
 </div>
 <div id="div_group_18" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_18" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('82.8');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load let user view tweet edit form if not logged in</span><span class='duration'>0.01897s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load let user view tweet edit form if not logged in</span><span class='duration'>0.00973s</span></dd>
   </dl>
 </div>
 <div id="div_group_19" class="example_group passed">
@@ -436,47 +436,31 @@ a {
   <dl style="margin-left: 30px;">
   <dt id="example_group_20" class="passed">logged in</dt>
     <script type="text/javascript">moveProgressBar('85.7');</script>
-    <dd class="example passed"><span class="passed_spec_name">lets a user delete their own tweet if they are logged in</span><span class='duration'>0.05054s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">lets a user delete their own tweet if they are logged in</span><span class='duration'>0.18928s</span></dd>
     <script type="text/javascript">moveProgressBar('88.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not let a user delete a tweet they did not create</span><span class='duration'>0.04873s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not let a user delete a tweet they did not create</span><span class='duration'>0.25816s</span></dd>
   </dl>
 </div>
 <div id="div_group_21" class="example_group passed">
   <dl style="margin-left: 30px;">
   <dt id="example_group_21" class="passed">logged out</dt>
     <script type="text/javascript">moveProgressBar('91.4');</script>
-    <dd class="example passed"><span class="passed_spec_name">does not load let user delete a tweet if not logged in</span><span class='duration'>0.01840s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">does not load let user delete a tweet if not logged in</span><span class='duration'>0.01557s</span></dd>
   </dl>
 </div>
 <div id="div_group_22" class="example_group passed">
   <dl style="margin-left: 0px;">
   <dt id="example_group_22" class="passed">User</dt>
     <script type="text/javascript">moveProgressBar('94.2');</script>
-    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.01097s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">can slug the username</span><span class='duration'>0.08263s</span></dd>
     <script type="text/javascript">moveProgressBar('97.1');</script>
-    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.35768s</span></dd>
-    <script type="text/javascript">makeRed('rspec-header');</script>
-    <script type="text/javascript">makeRed('div_group_22');</script>
-    <script type="text/javascript">makeRed('example_group_22');</script>
+    <dd class="example passed"><span class="passed_spec_name">can find a user based on the slug</span><span class='duration'>0.08359s</span></dd>
     <script type="text/javascript">moveProgressBar('100.0');</script>
-    <dd class="example failed">
-      <span class="failed_spec_name">has a secure password</span>
-      <span class="duration">0.02433s</span>
-      <div class="failure" id="failure_1">
-        <div class="message"><pre>undefined method `authenticate&#39; for #&lt;User:0x007f86a0059de8&gt;</pre></div>
-        <div class="backtrace"><pre>/Users/brandenmiller/.rvm/gems/ruby-2.2.3/gems/activemodel-4.2.5/lib/active_model/attribute_methods.rb:433:in `method_missing&#39;
-./spec/models/user_spec.rb:18:in `block (2 levels) in &lt;top (required)&gt;&#39;</pre></div>
-    <pre class="ruby"><code><span class="linenum">431</span>      <span class="keyword">else</span>
-<span class="linenum">432</span>        match = match_attribute_method?(method.to_s)
-<span class="offending"><span class="linenum">433</span>        match ? attribute_missing(match, *args, &amp;block) : <span class="keyword">super</span></span>
-<span class="linenum">434</span>      <span class="keyword">end</span>
-<span class="linenum">435</span>    <span class="keyword">end</span></code></pre>
-      </div>
-    </dd>
+    <dd class="example passed"><span class="passed_spec_name">has a secure password</span><span class='duration'>0.22445s</span></dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>1.49287 seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "35 examples, 1 failure";</script>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>4.35754 seconds</strong>";</script>
+<script type="text/javascript">document.getElementById('totals').innerHTML = "35 examples, 0 failures";</script>
 </div>
 </div>
 </body>
